<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="60dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <ImageView
        android:id="@+id/accountTypeIcon"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:contentDescription="@string/account_type_icon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <LinearLayout
        android:id="@+id/savingDetails"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="12dp"
        android:paddingEnd="0dp"
        app:layout_constraintStart_toEndOf="@id/accountTypeIcon"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/savingAmount">

        <TextView
            android:id="@+id/accountName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/saving"
            android:textColor="#212121"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/accountNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_1000_548"
            android:textColor="#757575"
            android:textSize="12sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/savingAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="end"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:id="@+id/accountBalance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/etb_2_200"
            android:textColor="#212121"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/lastUpdated"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/last_updated_01_24"
            android:textColor="#757575"
            android:textSize="12sp" />
    </LinearLayout>

    <View
        android:id="@+id/divder"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/gray"
        android:layout_marginTop="1dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>