<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/dark_blue_gray"

    >


    <!-- Dark Header -->
    <LinearLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toTopOf="parent"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">
         <LinearLayout
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:orientation="vertical">
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/good_morning"
                 android:textColor="@color/text_gary"
                 android:textSize="16sp"
                 />
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/jon_doe"
                 android:textColor="@color/white"
                 android:textSize="18sp"
                 />
         </LinearLayout>
         <com.google.android.material.imageview.ShapeableImageView
             android:layout_width="40dp"
             android:layout_height="40dp"
             android:contentDescription="@string/user_profile"
             android:src="@drawable/profile_pic"
             app:shapeAppearanceOverlay="@style/roundedImageViewRounded"
             app:strokeColor="@color/white"
             app:strokeWidth="0.5dp"
             />
        </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="vertical">
        <TextView
            android:id="@+id/total_balance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/etb_86400_0"
            android:textSize="28sp"
            android:textStyle="bold"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/available_balance"
            android:textSize="13sp"
            android:layout_marginTop="4dp"
            android:textColor="@color/text_scondary"
            />

    </LinearLayout>
    </LinearLayout>

    <!-- Content Area -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/header"
        app:layout_constraintBottom_toBottomOf="parent"
        android:padding="16dp"
        android:scrollbars="none"
        android:layout_marginTop="16dp"
        android:background="@drawable/top_left_raduis_bg"
        >
       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="0dp"
           android:orientation="vertical"
           >
<!--           action rows-->
           <androidx.constraintlayout.widget.ConstraintLayout
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_marginTop="16dp"
               android:padding="0dp"
               >

               <!-- Transfer Item -->
               <TextView
                   android:id="@+id/tvTransfer"
                   android:layout_width="0dp"
                   android:layout_height="wrap_content"
                   android:text="@string/transfer"
                   android:textColor="@color/text_dark"
                   android:textAlignment="center"
                   android:drawablePadding="4dp"
                   app:drawableTopCompat="@drawable/resized_send"
                   app:layout_constraintStart_toStartOf="parent"
                   app:layout_constraintEnd_toStartOf="@+id/tvBills"
                   app:layout_constraintTop_toTopOf="parent"
                   app:layout_constraintWidth_percent="0.25" />

               <!-- Bills Item -->
               <TextView
                   android:id="@+id/tvBills"
                   android:layout_width="0dp"
                   android:layout_height="wrap_content"
                   android:text="@string/bills"
                   android:textColor="@color/text_dark"
                   android:textAlignment="center"
                   android:drawablePadding="4dp"
                   app:drawableTopCompat="@drawable/resized_bill"
                   app:layout_constraintStart_toEndOf="@id/tvTransfer"
                   app:layout_constraintEnd_toStartOf="@+id/tvRecharge"
                   app:layout_constraintTop_toTopOf="parent"
                   app:layout_constraintWidth_percent="0.25" />

               <!-- Recharge Item -->
               <TextView
                   android:id="@+id/tvRecharge"
                   android:layout_width="0dp"
                   android:layout_height="wrap_content"
                   android:text="@string/recharge"
                   android:textColor="@color/text_dark"
                   android:textAlignment="center"
                   android:drawablePadding="4dp"
                   app:drawableTopCompat="@drawable/resized_recharge"
                   app:layout_constraintStart_toEndOf="@id/tvBills"
                   app:layout_constraintEnd_toStartOf="@+id/tvMore"
                   app:layout_constraintTop_toTopOf="parent"
                   app:layout_constraintWidth_percent="0.25" />

               <!-- More Item -->
               <TextView
                   android:id="@+id/tvMore"
                   android:layout_width="0dp"
                   android:layout_height="wrap_content"
                   android:text="@string/more"
                   android:textColor="@color/text_dark"
                   android:textAlignment="center"
                   android:drawablePadding="4dp"
                   app:drawableTopCompat="@drawable/resized_more"
                   app:layout_constraintStart_toEndOf="@id/tvRecharge"
                   app:layout_constraintEnd_toEndOf="parent"
                   app:layout_constraintTop_toTopOf="parent"
                   app:layout_constraintWidth_percent="0.25" />

           </androidx.constraintlayout.widget.ConstraintLayout>

<!--           my account section-->
           <androidx.constraintlayout.widget.ConstraintLayout
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_marginTop="32dp"
              >

               <!-- Left Text -->
               <TextView
                   android:id="@+id/tvMyAccount"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:text="@string/my_accounts"
                   android:textSize="16sp"
                   android:textColor="@color/text_dark"
                   app:layout_constraintStart_toStartOf="parent"
                   app:layout_constraintTop_toTopOf="parent"
                   app:layout_constraintBottom_toBottomOf="parent"/>

               <!-- Right Text -->
               <TextView
                   android:id="@+id/tvSeeMore"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:text="@string/see_more"
                   android:textSize="14sp"
                   android:textColor="@color/gray"
                   app:layout_constraintEnd_toEndOf="parent"
                   app:layout_constraintTop_toTopOf="@id/tvMyAccount"
                   app:layout_constraintBottom_toBottomOf="@id/tvMyAccount"/>

           </androidx.constraintlayout.widget.ConstraintLayout>

<!--           account card-->
              <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerViewAccounts"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:clipToPadding="false"
                android:background="@drawable/card_bg"
                android:scrollbars="none"
                tools:itemCount="2"
                android:padding="8dp"
                tools:listitem="@layout/account_item"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintTop_toBottomOf="@id/tvMyAccount"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                />

           <androidx.constraintlayout.widget.ConstraintLayout
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_marginTop="32dp"
               >

               <!-- Left Text -->
               <TextView
                   android:id="@+id/recentTransactions"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:text="@string/recent_transactions"
                   android:textSize="16sp"
                   android:textColor="@color/text_dark"
                   app:layout_constraintStart_toStartOf="parent"
                   app:layout_constraintTop_toTopOf="parent"
                   app:layout_constraintBottom_toBottomOf="parent"/>

               <!-- Right Text -->
               <TextView
                   android:id="@+id/seeMoreTransactions"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:text="@string/see_more"
                   android:textSize="14sp"
                   android:textColor="@color/gray"
                   app:layout_constraintEnd_toEndOf="parent"
                   app:layout_constraintTop_toTopOf="@id/recentTransactions"
                   app:layout_constraintBottom_toBottomOf="@id/recentTransactions"/>

           </androidx.constraintlayout.widget.ConstraintLayout>

           <androidx.recyclerview.widget.RecyclerView
               android:id="@+id/recentTransactionRv"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_marginTop="8dp"
               android:clipToPadding="false"
               android:background="@drawable/card_bg"
               android:scrollbars="none"
               tools:itemCount="2"
               android:padding="8dp"
               tools:listitem="@layout/transaction_item"
               app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
               app:layout_constraintTop_toBottomOf="@id/tvMyAccount"
               app:layout_constraintStart_toStartOf="parent"
               app:layout_constraintEnd_toEndOf="parent"
               />
       </LinearLayout>


    </ScrollView>

    <!-- Progress Bar -->
    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/header"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>