<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_blue_gray"
    >



    <!-- Dark Header -->
    <LinearLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        android:layout_marginTop="5dp"
        app:layout_constraintTop_toTopOf="parent"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:letterSpacing="0.05"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:textColor="@color/white"
            android:textSize="36sp"
            android:textStyle="bold"
            android:layout_marginTop="8dp" />
    </LinearLayout>

    <!-- Content Area -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/header"
        app:layout_constraintBottom_toBottomOf="parent"
        android:padding="16dp"
        android:scrollbars="none"
        android:layout_marginTop="16dp"
        android:background="@drawable/top_left_raduis_bg"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="8dp">

            <com.example.bankingapp.ui.componets.TextInputView
                android:id="@+id/first_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                app:labelText="First Name"
                android:layout_marginTop="8dp"
                app:hintText="please specify your first name"
                app:inputTypeAttr="multiline"
                />

            <com.example.bankingapp.ui.componets.TextInputView
                android:id="@+id/last_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                app:labelText="Last Name"
                app:hintText="please specify your last name"
                app:inputTypeAttr="multiline"
                />
            <com.example.bankingapp.ui.componets.TextInputView
                android:id="@+id/usernameField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                app:labelText="Username"
                app:hintText="please enter new username"
                app:inputTypeAttr="multiline"
                />
            <com.example.bankingapp.ui.componets.TextInputView
                android:id="@+id/phone_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                app:labelText="Phone Number"
                app:hintText="enter a valid phone number"
                app:inputTypeAttr="multiline"
                />

            <!-- Password Field -->
            <com.example.bankingapp.ui.componets.TextInputView
                android:id="@+id/passwordField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                app:labelText="Password"
                app:inputTypeAttr="text"
                app:hintText="please create new password"
                />


            <!-- Login Button -->
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_login"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="35dp"
                android:backgroundTint="@color/dark_blue_gray"
                android:text="@string/register"
                android:padding="10dp"
                app:cornerRadius="10dp"
                android:textColor="@color/white" />

            <!-- Bottom Text -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="8dp"
                android:text="@string/already_have_an_account"
                android:textColor="@color/gray" />

            <TextView
                android:id="@+id/tv_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/login"
                android:textColor="@color/dark_blue_gray" />
        </LinearLayout>
    </ScrollView>

    <!-- Progress Bar -->
    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/header"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>